# harnessReport

./: .env.example  .gitignore  CLAUDE.md  README.md  SK하이닉스_주식분석_보고서_20260513.md  docker-compose.yml
_workspace/: 02_fundamental_analysis.md  02_industry_analysis.md  02_macro_analysis.md  02_sentiment_analysis.md  02_technical_analysis.md  99_qa_checklist.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  openrouter.py  openrouter_demo.py  orchestrator.py
backend/app/agents/: base.py  fundamental.py  industry.py  macro.py  reviewer.py  sentiment.py  technical.py
backend/app/data/: fetcher.py  fundamentals.py  indicators.py  macro.py  news.py  prices.py  resolver.py
backend/app/prompts/methodology/: citations.md  industry.md  macro.md  sentiment.md  technical.md  valuation.md
backend/app/prompts/system/: fundamental.md  industry.md  macro.md  reviewer.md  sentiment.md  technical.md
backend/app/routes/: analyze.py  health.py  jobs.py  models.py
backend/app/schemas/: data.py  events.py  inputs.py  outputs.py
backend/app/storage/: db.py  jobs.py
backend/app/utils/: markdown.py  prompt_loader.py  sse.py
backend/scripts/: list_models.py  smoke.py
backend/tests/: conftest.py  test_agents.py  test_data_unconfigured.py  test_demo_mode.py  test_error_cases.py  test_fetcher.py  test_health.py  test_indicators.py  test_markdown_render.py  test_openrouter.py  test_orchestrator.py  test_prompts.py  test_routes.py  test_schemas.py  test_sse.py  test_storage.py
docs/: ARCHITECTURE.md
(+37 files in other folders)
